--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,31 @@
-/* место для вашего кода */
+body {
+    font-family: Raleway, sans-serif;
+}
+.header {
+
+}
+
+.header_links-list {
+  display: inline;
+}
+
+.header_link {
+  color: #000;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.header_logo {
+  
+}
+
+.header_logo-image {
+  width: 148px;
+  height: 105px;
+  flex-shrink: 0
+}
+
+
+
