Обновлены стили шапки

--- a/styles/style.css
+++ b/styles/style.css
@@ -2,30 +2,53 @@ body {
     font-family: Raleway, sans-serif;
 }
 .header {
-
+  display: flex;
+  justify-content: space-between;
+  padding: 92px 49px 92px 51px;
+ 
 }
 
 .header_links-list {
-  display: inline;
+  display: flex;
+  flex-direction: row;
+  gap: 32px;
+  list-style: circle;
 }
 
 .header_link {
+  display: inline;
   color: #000;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+  text-transform: lowercase;
+
 }
+.header_links-list-item-no-bullit .header_link header_link-active {
+    text-decoration: none;
+  }
 
 .header_logo {
-  
+  display: block;
+  width: 148px;
 }
 
 .header_logo-image {
-  width: 148px;
-  height: 105px;
-  flex-shrink: 0
+  dispaly: flex;
+  justify-content: center;
+  width: 100%;
 }
+
+.address {
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24.3px;
+  text-decoration: overline;
+}
+
+
 
 
 
