--- a/styles/style.css
+++ b/styles/style.css
@@ -2,51 +2,215 @@ body {
     font-family: Raleway, sans-serif;
 }
 .header {
+  width: 1340px;
+  height: 109px;
+  padding: 92px 49px 92px 51px;   
+  }
+
+.header_container {
   display: flex;
-  justify-content: space-between;
-  padding: 92px 49px 92px 51px;
- 
-}
+  justify-content: space-between;  
+  }
 
 .header_links-list {
   display: flex;
-  flex-direction: row;
   gap: 32px;
-  list-style: circle;
-}
-
-.header_link {
-  display: inline;
   color: #000;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
   text-transform: lowercase;
-
+  text-underline-offset: 5px;
+  padding-top: 43px;
+  padding-bottom: 43px;
 }
-.header_links-list-item-no-bullit .header_link header_link-active {
-    text-decoration: none;
-  }
+
+.header__links-list-item {
+  list-style: circle;
+}
+
+
+.header__links-list-item-no-bullit {
+  text-decoration: none;
+  list-style: none;
+}
 
 .header_logo {
   display: block;
-  width: 148px;
+  
 }
 
 .header_logo-image {
-  dispaly: flex;
-  justify-content: center;
-  width: 100%;
-}
+  width: 148px;
+  height: 105px;
+  
+} 
 
-.address {
+.header_address {
+  color: #000;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
   line-height: 24.3px;
-  text-decoration: overline;
+  text-underline-offset: 5px;
+  padding-top: 5px;
+  padding-bottom: 7px;
 }
+
+.cover {
+  padding: 96px 0 180px 0;
+  width: 1440px;
+  height: 763.939px;
+  background-image: url(../images/cover.jpg);
+  background-repeat: no-repeat;
+  
+}
+
+.overlay {
+  position: absolute;
+  width: 1440px;
+  height: 757px;
+  background-color: #000;
+  opacity: 0.6;
+
+}
+
+.cover_title {
+color: #000;
+font-size: 100px;
+font-style: normal;
+font-weight: 700;
+text-transform: uppercase;
+padding: 165px 50px 237px 50px;
+}
+
+.aligned-text {
+  
+  
+}
+
+.aligned-text_center {
+  display:block;
+  letter-spacing: 30px;
+  text-align: center;
+}
+
+.letter-spacing-extended {
+  letter-spacing: 60px;
+}
+
+.aligned-text_right {
+  display: block;
+  text-align: right;
+
+}
+
+.no-letter-spacing {
+letter-spacing: 30px;
+}
+
+.cover__description-text {
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 28px;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+.lots {
+  padding: 180px 50px 181px 50px;
+}
+
+.lots__heading {
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  text-transform: uppercase;
+}
+
+.lots__card-list {
+  list-style: none;
+}
+
+.card__title {
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 120%;
+  text-decoration-line: underline;
+  text-transform: uppercase;
+}
+
+.card__text {
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 120%;
+}
+
+.card {
+  width: 430px;
+  height: 450px;
+}
+
+
+
+.about {
+  padding: 181px 50px 180px 50px;
+}
+
+.footer{
+  display: flex;
+  justify-content: space-between;
+  align-items: stretch;
+  padding: 180px 50px 90px 50px;
+}
+
+.footer_address {
+  color: #000;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24.3px;
+  text-underline-offset: 5px
+}
+
+.footer_menu-list {
+  display: grid;
+  color: #000;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-transform: lowercase;
+  text-align: center;
+  text-underline-offset: 5px;
+  list-style: none;
+}
+
+.footer_menu-link_active {
+  text-decoration: none;
+}
+
+.footer__social-list-item {
+  list-style: none; 
+}
+
+.footer__social-list {
+  display: flex;
+  width: 240px;
+  height: 48px;
+  flex-shrink: 0;  
+}
+
+
+  
+
+
+
 
 
 
