--- a/styles/style.css
+++ b/styles/style.css
@@ -1,15 +1,20 @@
 body {
-    font-family: Raleway, sans-serif;
+  max-width: 1440px;
+  max-height: 2844px;
 }
 .header {
   width: 1340px;
-  height: 109px;
-  padding: 92px 49px 92px 51px;   
+  padding-top: 92px;
+  padding-right:49px;
+  padding-left: 51px;
+  margin-bottom: 92px;   
   }
 
 .header_container {
   display: flex;
-  justify-content: space-between;  
+  justify-content: space-between;
+  width: 1340px;
+  height: 109px; 
   }
 
 .header_links-list {
@@ -24,12 +29,12 @@ body {
   text-underline-offset: 5px;
   padding-top: 43px;
   padding-bottom: 43px;
+  white-space: nowrap;
 }
 
 .header__links-list-item {
   list-style: circle;
 }
-
 
 .header__links-list-item-no-bullit {
   text-decoration: none;
@@ -37,90 +42,125 @@ body {
 }
 
 .header_logo {
-  display: block;
-  
+  margin-left: 209px;
+  margin-right: 355px;
 }
 
 .header_logo-image {
   width: 148px;
   height: 105px;
-  
 } 
 
-.header_address {
+.address {
   color: #000;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
   line-height: 24.3px;
   text-underline-offset: 5px;
+  white-space: nowrap;
   padding-top: 5px;
   padding-bottom: 7px;
 }
 
-.cover {
-  padding: 96px 0 180px 0;
-  width: 1440px;
-  height: 763.939px;
-  background-image: url(../images/cover.jpg);
-  background-repeat: no-repeat;
-  
-}
-
 .overlay {
   position: absolute;
-  width: 1440px;
-  height: 757px;
+  width: 100%;
+  height: 100%;
   background-color: #000;
   opacity: 0.6;
-
+  z-index: -1;
+}
+.cover {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  position: relative;
+  width: 1440px;
+  height: 757px;
+  background-image: url(../images/cover.jpg);
+  background-repeat: no-repeat;
+  z-index: 1;
+  margin-bottom: 180px;
 }
 
 .cover_title {
-color: #000;
-font-size: 100px;
-font-style: normal;
-font-weight: 700;
-text-transform: uppercase;
-padding: 165px 50px 237px 50px;
+  display: grid;
+  grid-template-rows: 115px 100px 100px;
+  gap: 20px;
+  place-items: stretch;
+  z-index: 1;
+  color: #fff;
+  font-size: 100px;
+  font-style: normal;
+  font-weight: 700;
+  text-transform: uppercase;
+  padding-top: 165px;
 }
 
 .aligned-text {
-  
-  
+  display: block;
 }
 
 .aligned-text_center {
-  display:block;
-  letter-spacing: 30px;
   text-align: center;
 }
 
-.letter-spacing-extended {
-  letter-spacing: 60px;
+.aligned-text_right {
+  text-align: right;
 }
 
-.aligned-text_right {
-  display: block;
-  text-align: right;
+.aligned-text_left {
+  padding-left: 50px;
+}
 
+.letter-spacing-extended {
+  letter-spacing: 60px; 
 }
 
 .no-letter-spacing {
-letter-spacing: 30px;
+  letter-spacing: 30px; 
+}
+
+.cover__description {
+  display: flex;
+  justify-content: end;
+  gap: 78px; 
+  padding-right: 50px;
+  padding-bottom: 50px;
+  z-index: 1;
 }
 
 .cover__description-text {
+  color: #FFF;
   font-size: 22px;
   font-style: normal;
   font-weight: 400;
   line-height: 28px;
   text-transform: uppercase;
+  word-spacing: 18px;
+  padding-top: 12px;
+}
+
+.bet-button {
+  color: #FFF;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-transform: uppercase;
   text-align: center;
+  background: transparent;
+  border: 1px solid #FFF;
+  padding: 12px 32px;
 }
 
 .lots {
-  padding: 180px 50px 181px 50px;
+  width: 1340px;
+  height: 579px;
+  margin-right: 50px;
+  margin-left: 50px;
+  margin-bottom: 181px;
 }
 
 .lots__heading {
@@ -129,57 +169,156 @@ letter-spacing: 30px;
   font-weight: 700;
   line-height: normal;
   text-transform: uppercase;
+  padding-bottom: 27px;
+  padding-left: 40px;
 }
 
 .lots__card-list {
+  display: grid;
+  grid-template-columns: repeat(3, 430px);
+  gap: 25px;
+  position: relative;
+  z-index: 1;
   list-style: none;
+  width: 430px;
+  height: 450px;
+  margin-bottom: 30px;
+}
+
+.card_type_film {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  position: relative;
+  background-image: url(../images/card-lot-01.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  z-index: 1;
+  width: 430px;
+  height: 450px;
+}
+
+.card_type_book {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  position: relative;
+  z-index: 1;
+  background-image: url(../images/card-lot-02.jpg) ;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 430px;
+  height: 450px;
+}
+
+.card_type_picture {
+  display: flex;
+  flex-direction: column;
+  gap: 84px;
+  position: relative;
+  z-index: 2;
+  background-image: url(../images/card-lot-03.jpg) ;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 430px;
+  height: 450px;
 }
 
 .card__title {
+  color: #FFF;
   font-size: 22px;
   font-style: normal;
   font-weight: 700;
   line-height: 120%;
   text-decoration-line: underline;
   text-transform: uppercase;
+  padding-top: 50px;
+  padding-right: 40px;
+  padding-left: 40px;
 }
 
 .card__text {
+  color: #FFF;
   font-size: 20px;
   font-style: normal;
   font-weight: 400;
   line-height: 120%;
+  padding-right: 40px;
+  padding-left: 40px;
+  padding-bottom: 50px;
 }
 
-.card {
-  width: 430px;
-  height: 450px;
+.lots__look-more-link {
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-transform: lowercase;
+  text-underline-offset: 5px;
+  padding-left: 40px;
 }
-
-
 
 .about {
-  padding: 181px 50px 180px 50px;
+  display: grid;
+  grid-template-columns: 430px 2fr;
+  gap: 25px;
+  width: 1340px;
+  height: 487px;
+  margin-right: 50px;
+  margin-left: 50px;
 }
+
+.logo {
+  background-color: #000;
+  border-radius: 50%;
+  width: 240px;
+  height: 240px;
+  display:flex;
+  justify-content: center;
+  padding-top: 63px;
+  margin-left: 95px;
+}
+
+.about_logo-image {
+  width: 148px;
+  height: 114px;
+}
+
+.about__title {
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  text-transform: uppercase;
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+
+.about__text {
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.container_about__text {
+  display: grid;
+  grid-template-rows: 96px 119px;
+  row-gap: 25px;
+}
+
 
 .footer{
   display: flex;
   justify-content: space-between;
-  align-items: stretch;
-  padding: 180px 50px 90px 50px;
-}
-
-.footer_address {
-  color: #000;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 24.3px;
-  text-underline-offset: 5px
+  margin-top: 180px;
+  padding-bottom: 90px;
+  margin-left: 50px;
+  width: 1340px;
+  height: 97px;
 }
 
 .footer_menu-list {
-  display: grid;
   color: #000;
   font-size: 18px;
   font-style: normal;
@@ -200,10 +339,17 @@ letter-spacing: 30px;
 }
 
 .footer__social-list {
-  display: flex;
   width: 240px;
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 49px;
+}
+
+.footer__social-icon {
+  width: 48px;
   height: 48px;
 }
+
 
 
   
