--- a/styles/style.css
+++ b/styles/style.css
@@ -51,7 +51,7 @@ body {
   height: 105px;
 } 
 
-.address {
+.header_address {
   color: #000;
   font-size: 18px;
   font-style: normal;
@@ -307,7 +307,6 @@ body {
   row-gap: 25px;
 }
 
-
 .footer {
   display: flex;
   justify-content: space-between;
@@ -316,6 +315,16 @@ body {
   margin-left: 50px;
   width: 1340px;
   height: 97px;
+}
+
+.footer_address {
+  color: #000;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24.3px;
+  text-underline-offset: 5px;
+  white-space: nowrap;
 }
 
 .footer_menu-list {
