--- a/styles/style.css
+++ b/styles/style.css
@@ -1,21 +1,15 @@
-body {
-  max-width: 1440px;
-  max-height: 2844px;
-}
-
 .header {
-  width: 1340px;
+  max-width: 1340px;
   padding-top: 92px;
   padding-right:49px;
-  padding-left: 51px;
+  padding-left: 49px;
   margin-bottom: 92px;
 }
 
 .header_container {
   display: flex;
   justify-content: space-between;
-  width: 1340px;
-  height: 109px;
+  max-width: 1340px;
 }
 
 .header_links-list {
@@ -30,7 +24,6 @@ body {
   text-underline-offset: 5px;
   padding-top: 43px;
   padding-bottom: 43px;
-  white-space: nowrap;
 }
 
 .header__links-list-item {
@@ -43,51 +36,58 @@ body {
 }
 
 .header_logo {
-  margin-left: 209px;
-  margin-right: 355px;
+  display: grid;
+  grid-template-columns: 1fr min-content 1fr;
 }
 
 .header_logo-image {
   width: 148px;
   height: 105px;
-} 
+}
 
-.header_address {
+.address {
   color: #000;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
   line-height: 24.3px;
   text-underline-offset: 5px;
-  white-space: nowrap;
-  padding-top: 5px;
-  padding-bottom: 7px;
+}
+
+.address-text {
+  width: 240px;
+  height: 49px;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24.3px;
 }
 
 .overlay {
   position: absolute;
-  width: 100%;
+  max-width: 100%;
   height: 100%;
   background-color: #000;
   opacity: 0.6;
   z-index: -1;
+  inset: 0;
 }
 .cover {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   position: relative;
-  width: 1440px;
-  height: 757px;
+  min-height: 757px;
   background-image: url(../images/cover.jpg);
   background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
   z-index: 1;
   margin-bottom: 180px;
 }
 
 .cover_title {
   display: grid;
-  grid-template-rows: 115px 100px 100px;
   gap: 20px;
   place-items: stretch;
   z-index: 1;
@@ -95,8 +95,9 @@ body {
   font-size: 100px;
   font-style: normal;
   font-weight: 700;
-  text-transform: uppercase;
+  text-transform:capitalize;
   padding-top: 165px;
+  padding-left: 50px;
 }
 
 .aligned-text {
@@ -109,10 +110,6 @@ body {
 
 .aligned-text_right {
   text-align: right;
-}
-
-.aligned-text_left {
-  padding-left: 50px;
 }
 
 .letter-spacing-extended {
@@ -133,7 +130,7 @@ body {
 }
 
 .cover__description-text {
-  color: #FFF;
+  color: #fff;
   font-size: 22px;
   font-style: normal;
   font-weight: 400;
@@ -144,7 +141,8 @@ body {
 }
 
 .bet-button {
-  color: #FFF;
+  color: #fff;
+  font-family: Raleway;
   font-size: 22px;
   font-style: normal;
   font-weight: 400;
@@ -152,13 +150,12 @@ body {
   text-transform: uppercase;
   text-align: center;
   background: transparent;
-  border: 1px solid #FFF;
+  border: 1px solid currentColor;
   padding: 12px 32px;
 }
 
 .lots {
-  width: 1340px;
-  height: 579px;
+  max-width: 100%;
   margin-right: 50px;
   margin-left: 50px;
   margin-bottom: 181px;
@@ -181,8 +178,6 @@ body {
   position: relative;
   z-index: 1;
   list-style: none;
-  width: 430px;
-  height: 450px;
   margin-bottom: 30px;
 }
 
@@ -226,7 +221,7 @@ body {
 }
 
 .card__title {
-  color: #FFF;
+  color: #fff;
   font-size: 22px;
   font-style: normal;
   font-weight: 700;
@@ -239,7 +234,7 @@ body {
 }
 
 .card__text {
-  color: #FFF;
+  color: #fff;
   font-size: 20px;
   font-style: normal;
   font-weight: 400;
@@ -247,6 +242,10 @@ body {
   padding-right: 40px;
   padding-left: 40px;
   padding-bottom: 50px;
+}
+
+.card-link {
+  text-decoration: none;
 }
 
 .lots__look-more-link {
@@ -263,8 +262,7 @@ body {
   display: grid;
   grid-template-columns: 430px 2fr;
   gap: 25px;
-  width: 1340px;
-  height: 487px;
+  max-width: 100%;
   margin-right: 50px;
   margin-left: 50px;
 }
@@ -274,7 +272,7 @@ body {
   border-radius: 50%;
   width: 240px;
   height: 240px;
-  display:flex;
+  display: flex;
   justify-content: center;
   padding-top: 63px;
   margin-left: 95px;
@@ -304,7 +302,6 @@ body {
 
 .container_about__text {
   display: grid;
-  grid-template-rows: 96px 119px;
   row-gap: 25px;
 }
 
@@ -314,18 +311,7 @@ body {
   margin-top: 180px;
   padding-bottom: 90px;
   margin-left: 50px;
-  width: 1340px;
-  height: 97px;
-}
-
-.footer_address {
-  color: #000;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 24.3px;
-  text-underline-offset: 5px;
-  white-space: nowrap;
+  max-width: 100%;
 }
 
 .footer_menu-list {
@@ -349,8 +335,8 @@ body {
 }
 
 .footer__social-list {
-  width: 240px;
   display: flex;
+  gap: 48px;
   justify-content: space-between;
   padding-bottom: 49px;
 }
@@ -359,7 +345,6 @@ body {
   width: 48px;
   height: 48px;
 }
-
 
 
   
