--- a/styles/style.css
+++ b/styles/style.css
@@ -1,15 +1,10 @@
 .header {
-  max-width: 1340px;
-  padding-top: 92px;
-  padding-right:49px;
-  padding-left: 49px;
-  margin-bottom: 92px;
-}
-
-.header_container {
   display: flex;
   justify-content: space-between;
-  max-width: 1340px;
+  max-width: 1440px;
+  padding-right: 49px;
+  padding-left: 51px;
+  padding-bottom: 92px;
 }
 
 .header_links-list {
@@ -36,14 +31,16 @@
 }
 
 .header_logo {
-  display: grid;
+  display: grid;;
   grid-template-columns: 1fr min-content 1fr;
+  justify-items: center;
+  justify-content: space-between;
 }
 
 .header_logo-image {
   width: 148px;
   height: 105px;
-}
+} 
 
 .address {
   color: #000;
@@ -52,52 +49,51 @@
   font-weight: 400;
   line-height: 24.3px;
   text-underline-offset: 5px;
-}
-
-.address-text {
+  padding-top: 5px;
+  padding-bottom: 7px;
   width: 240px;
-  height: 49px;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 24.3px;
+  min-height: 97px;
 }
 
 .overlay {
   position: absolute;
-  max-width: 100%;
+  width: 100%;
   height: 100%;
   background-color: #000;
   opacity: 0.6;
   z-index: -1;
   inset: 0;
 }
+
 .cover {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   position: relative;
+  max-width: 1440px;
   min-height: 757px;
   background-image: url(../images/cover.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
   z-index: 1;
-  margin-bottom: 180px;
+  padding-top: 165px;
+  padding-right: 50px;
+  padding-left: 50px;
+  margin-bottom: 180px; 
 }
 
 .cover_title {
-  display: grid;
+  display: flex;
+  flex-direction: column;
   gap: 20px;
-  place-items: stretch;
-  z-index: 1;
   color: #fff;
+  line-height: 1.15; 
+  letter-spacing: 30px;
   font-size: 100px;
   font-style: normal;
   font-weight: 700;
-  text-transform:capitalize;
-  padding-top: 165px;
-  padding-left: 50px;
+  text-transform: uppercase;
 }
 
 .aligned-text {
@@ -106,10 +102,12 @@
 
 .aligned-text_center {
   text-align: center;
+  line-height: 1;
 }
 
 .aligned-text_right {
   text-align: right;
+  line-height: 1;
 }
 
 .letter-spacing-extended {
@@ -117,20 +115,19 @@
 }
 
 .no-letter-spacing {
-  letter-spacing: 30px;
+  letter-spacing: 0px;
 }
 
 .cover__description {
   display: flex;
   justify-content: end;
   gap: 78px;
-  padding-right: 50px;
   padding-bottom: 50px;
   z-index: 1;
 }
 
 .cover__description-text {
-  color: #fff;
+  color: #FFF;
   font-size: 22px;
   font-style: normal;
   font-weight: 400;
@@ -141,7 +138,7 @@
 }
 
 .bet-button {
-  color: #fff;
+  color: #FFF;
   font-family: Raleway;
   font-size: 22px;
   font-style: normal;
@@ -155,7 +152,7 @@
 }
 
 .lots {
-  max-width: 100%;
+  max-width: 1340px;
   margin-right: 50px;
   margin-left: 50px;
   margin-bottom: 181px;
@@ -181,47 +178,39 @@
   margin-bottom: 30px;
 }
 
+.card {
+  position: relative;
+  z-index: 1;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  width: 430px;
+}
+
 .card_type_film {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  position: relative;
   background-image: url(../images/card-lot-01.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  z-index: 1;
-  width: 430px;
-  height: 450px;
 }
 
 .card_type_book {
   display: flex;
   flex-direction: column;
   gap: 30px;
-  position: relative;
-  z-index: 1;
-  background-image: url(../images/card-lot-02.jpg) ;
-  background-repeat: no-repeat;
-  background-size: cover;
-  width: 430px;
-  height: 450px;
+  background-image: url(../images/card-lot-02.jpg);
 }
 
 .card_type_picture {
   display: flex;
   flex-direction: column;
   gap: 84px;
-  position: relative;
-  z-index: 2;
-  background-image: url(../images/card-lot-03.jpg) ;
-  background-repeat: no-repeat;
-  background-size: cover;
-  width: 430px;
-  height: 450px;
+  background-image: url(../images/card-lot-03.jpg);
 }
 
 .card__title {
-  color: #fff;
+  color: #FFF;
   font-size: 22px;
   font-style: normal;
   font-weight: 700;
@@ -234,7 +223,7 @@
 }
 
 .card__text {
-  color: #fff;
+  color: #FFF;
   font-size: 20px;
   font-style: normal;
   font-weight: 400;
@@ -262,7 +251,7 @@
   display: grid;
   grid-template-columns: 430px 2fr;
   gap: 25px;
-  max-width: 100%;
+  max-width: 1440px;
   margin-right: 50px;
   margin-left: 50px;
 }
@@ -272,7 +261,7 @@
   border-radius: 50%;
   width: 240px;
   height: 240px;
-  display: flex;
+  display:flex;
   justify-content: center;
   padding-top: 63px;
   margin-left: 95px;
@@ -311,7 +300,7 @@
   margin-top: 180px;
   padding-bottom: 90px;
   margin-left: 50px;
-  max-width: 100%;
+  max-width: 1340px;
 }
 
 .footer_menu-list {
@@ -345,6 +334,7 @@
   width: 48px;
   height: 48px;
 }
+
 
 
   
