--- a/styles/style.css
+++ b/styles/style.css
@@ -1,15 +1,15 @@
 .header {
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
   justify-content: space-between;
   max-width: 1440px;
-  padding-right: 49px;
-  padding-left: 51px;
-  padding-bottom: 92px;
+  padding: 92px 49px;
 }
 
 .header_links-list {
   display: flex;
   gap: 32px;
+  justify-self: start;
   color: #000;
   font-size: 18px;
   font-style: normal;
@@ -31,16 +31,13 @@
 }
 
 .header_logo {
-  display: grid;
-  grid-template-columns: 1fr min-content 1fr;
-  justify-items: center;
-  justify-content: space-between;
+  justify-self: center;
 }
 
 .header_logo-image {
   width: 148px;
   height: 105px;
-} 
+}
 
 .address {
   color: #000;
@@ -51,8 +48,8 @@
   text-underline-offset: 5px;
   padding-top: 5px;
   padding-bottom: 7px;
-  width: 240px;
-  min-height: 97px;
+  max-width: 240px;
+  justify-self: end;
 }
 
 .overlay {
@@ -127,7 +124,7 @@
 }
 
 .cover__description-text {
-  color: #FFF;
+  color: #fff;
   font-size: 22px;
   font-style: normal;
   font-weight: 400;
@@ -138,8 +135,8 @@
 }
 
 .bet-button {
-  color: #FFF;
-  font-family: Raleway;
+  color: #fff;
+  font-family: Raleway, sans-serif;
   font-size: 22px;
   font-style: normal;
   font-weight: 400;
@@ -179,9 +176,14 @@
 }
 
 .card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   position: relative;
   z-index: 1;
-  height: 100%;
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -189,28 +191,20 @@
 }
 
 .card_type_film {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
   background-image: url(../images/card-lot-01.jpg);
 }
 
 .card_type_book {
-  display: flex;
-  flex-direction: column;
   gap: 30px;
   background-image: url(../images/card-lot-02.jpg);
 }
 
 .card_type_picture {
-  display: flex;
-  flex-direction: column;
-  gap: 84px;
   background-image: url(../images/card-lot-03.jpg);
 }
 
 .card__title {
-  color: #FFF;
+  color: #fff;
   font-size: 22px;
   font-style: normal;
   font-weight: 700;
@@ -223,7 +217,7 @@
 }
 
 .card__text {
-  color: #FFF;
+  color: #fff;
   font-size: 20px;
   font-style: normal;
   font-weight: 400;
@@ -261,7 +255,7 @@
   border-radius: 50%;
   width: 240px;
   height: 240px;
-  display:flex;
+  display: flex;
   justify-content: center;
   padding-top: 63px;
   margin-left: 95px;
@@ -300,6 +294,7 @@
   margin-top: 180px;
   padding-bottom: 90px;
   margin-left: 50px;
+  margin-right: 50px;
   max-width: 1340px;
 }
 
@@ -334,10 +329,6 @@
   width: 48px;
   height: 48px;
 }
-
-
-
-  
 
 
 
